Fix how spacing classes are outputted

--- a/src/stylesheets/utility/_spacing.scss
+++ b/src/stylesheets/utility/_spacing.scss
@@ -14,13 +14,17 @@
     .mt-#{$i} {
         margin-top: $i * 8px
     }
+}
 
+@for $i from 1 through 15 {
     .mt-#{$i}-small {
         @include respond-to(small) {
             margin-top: $i * 8px
         }
     }
+}
 
+@for $i from 1 through 15 {
     .mt-#{$i}-medium {
         @include respond-to(medium) {
             margin-top: $i * 8px
@@ -44,13 +48,17 @@
     .mb-#{$i} {
         margin-bottom: $i * 8px
     }
+}
 
+@for $i from 1 through 15 {
     .mb-#{$i}-small {
         @include respond-to(small) {
             margin-bottom: $i * 8px
         }
     }
+}
 
+@for $i from 1 through 15 {
     .mb-#{$i}-medium {
         @include respond-to(medium) {
             margin-bottom: $i * 8px
